err/winnow.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/winnow'...
Listing './lib/python3.5/site-packages/winnow/keys'...
Listing './lib/python3.5/site-packages/winnow/models'...
Compiling './lib/python3.5/site-packages/winnow/operations.py'...
***   File "./lib/python3.5/site-packages/winnow/operations.py", line 238
    except jsonschema.ValidationError, e:
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/winnow/pipeline'...
Compiling './lib/python3.5/site-packages/winnow/pipeline/flow.py'...
***   File "./lib/python3.5/site-packages/winnow/pipeline/flow.py", line 34
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/winnow/schemata'...
Listing './lib/python3.5/site-packages/winnow/schemata/base'...
Listing './lib/python3.5/site-packages/winnow/schemata/formats'...
Listing './lib/python3.5/site-packages/winnow/tests'...
Listing './lib/python3.5/site-packages/winnow/tests/collection_tests'...
Compiling './lib/python3.5/site-packages/winnow/tests/collection_tests/collection_tests.py'...
***   File "./lib/python3.5/site-packages/winnow/tests/collection_tests/collection_tests.py", line 108
    print manufacturing_spec
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/winnow/tests/collection_tests/data'...
Listing './lib/python3.5/site-packages/winnow/tests/collection_tests/data/leandesk'...
Listing './lib/python3.5/site-packages/winnow/tests/data'...
Listing './lib/python3.5/site-packages/winnow/tests/data/birch-ply'...
Listing './lib/python3.5/site-packages/winnow/tests/data/finishes'...
Listing './lib/python3.5/site-packages/winnow/tests/data/finishes/premium-birch-ply'...
Listing './lib/python3.5/site-packages/winnow/tests/data/finishes/premium-wisa'...
Listing './lib/python3.5/site-packages/winnow/tests/data/finishes/standard-birch-ply'...
Listing './lib/python3.5/site-packages/winnow/tests/data/plywood'...
Listing './lib/python3.5/site-packages/winnow/tests/data/processes'...
Listing './lib/python3.5/site-packages/winnow/tests/data/processes/fine-sanding'...
Listing './lib/python3.5/site-packages/winnow/tests/data/processes/light-sanding'...
Listing './lib/python3.5/site-packages/winnow/tests/data/processes/oiling'...
Listing './lib/python3.5/site-packages/winnow/tests/data/products_for_validation'...
Listing './lib/python3.5/site-packages/winnow/tests/data/ref_tests'...
Listing './lib/python3.5/site-packages/winnow/tests/data/ref_tests/wisa-multiwall'...
Listing './lib/python3.5/site-packages/winnow/tests/data/reference'...
Listing './lib/python3.5/site-packages/winnow/tests/data/wisa-multiwall'...
Compiling './lib/python3.5/site-packages/winnow/tests/flow_tests.py'...
***   File "./lib/python3.5/site-packages/winnow/tests/flow_tests.py", line 148
    print manufacturing_spec
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/winnow/tests/null_option_tests.py'...
***   File "./lib/python3.5/site-packages/winnow/tests/null_option_tests.py", line 49
    print d
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/winnow/tests/numeric_tests.py'...
***   File "./lib/python3.5/site-packages/winnow/tests/numeric_tests.py", line 384
    print number3
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/winnow/tests/taxonomy_tests.py'...
***   File "./lib/python3.5/site-packages/winnow/tests/taxonomy_tests.py", line 200
    print material_choice
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/winnow/values'...
Compiling './lib/python3.5/site-packages/winnow/values/numeric_values.py'...
***   File "./lib/python3.5/site-packages/winnow/values/numeric_values.py", line 227
    print "should be this"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/winnow-0.1.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
